--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h1 align=center id=title><font color=lime>Dr</font>Kapdor</h1>
 		<h2 align=center id=subtitle><font color=lime>M</font>inecraft <font color=lime>s</font>erver <font color=lime>d</font>eveloper</h2>
 		<div align=center id=links> 
-			<a class=hoverable href="https://vk.com/drkapdor" target="_blank"><i class="fab fa-vk"></i></a>
+			<a class=hoverable href="https://vk.com/drkapok" target="_blank"><i class="fab fa-vk"></i></a>
 			<a class=hoverable href="https://discord.com/users/35251582974676173" target="_blank"><i class="fab fa-discord"></i></a>
 			<a class=hoverable href="https://steamcommunity.com/id/drkapdor/" target="_blank"><i class="fab fa-steam"></i></a>
 			<a class=hoverable href="mailto:admin@backcraft.ru" target="_blank"><i class="fas fa-at"></i></a>
